Properly aligned