@@ -101,24 +101,34 @@ public class MovieView2 extends JFrame {
         // Create user movie from input fields
         int length = Integer.parseInt(lengthField.getText().trim());
         String genre = genreField.getText().trim();
-        int budget = 1000; // Can change later to be based upon user input
-        Movie userMovie = new Movie(genre, lengthField.getText(), ratingField.getText()); // assuming constructor matches
+        int budget = 1000;
+        Movie userMovie = new Movie(genre, lengthField.getText(), ratingField.getText());
 
         ArrayList<Movie> recommended = MovieRecommender.closest(userMovie);
 
-        // CENTER: Show all recommended movies
-        JPanel centerPanel = new JPanel(new GridLayout(1, 3, 20, 10));
+        // Limit to 3 movies max to avoid layout issues
+        int maxMovies = Math.min(3, recommended.size());
+
+        // Create center panel with BoxLayout and spacing
+        JPanel centerPanel = new JPanel();
+        centerPanel.setLayout(new BoxLayout(centerPanel, BoxLayout.X_AXIS));
         centerPanel.setBackground(Color.LIGHT_GRAY);
 
-        for (Movie movie : recommended) {
+        centerPanel.add(Box.createHorizontalGlue());
+
+        for (int i = 0; i < maxMovies; i++) {
+            Movie movie = recommended.get(i);
+
             JPanel moviePanel = new JPanel();
             moviePanel.setLayout(new BoxLayout(moviePanel, BoxLayout.Y_AXIS));
             moviePanel.setBackground(Color.LIGHT_GRAY);
+            moviePanel.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
+            moviePanel.setMaximumSize(new Dimension(220, 450));
 
-            // Add poster
+            // Poster
             try {
-                if (movie.getImages() != null && !movie.getImages().getPosters().isEmpty()) {
-                    String posterPath = movie.getImages().getPosters().get(0).getFilePath();
+                if (movie.getImages() != null && !movie.getImages().isEmpty()) {
+                    String posterPath = movie.getImages().getFirst().getFilePath();
                     String fullUrl = "https://image.tmdb.org/t/p/w500" + posterPath;
                     ImageIcon icon = new ImageIcon(new java.net.URL(fullUrl));
                     Image img = icon.getImage().getScaledInstance(180, 270, Image.SCALE_SMOOTH);
@@ -138,11 +148,36 @@ public class MovieView2 extends JFrame {
             moviePanel.add(new JLabel("Length: " + movie.getLength() + " min"));
             moviePanel.add(new JLabel("Budget: $" + movie.getBudget()));
             moviePanel.add(new JLabel("Rating: " + movie.getRating()));
+            moviePanel.add(Box.createVerticalStrut(10));
+
+            // Overview with line wrapping
+            JTextArea overviewArea = new JTextArea("Overview:\n" + movie.getOverview());
+            overviewArea.setLineWrap(true);
+            overviewArea.setWrapStyleWord(true);
+            overviewArea.setEditable(false);
+            overviewArea.setOpaque(false);
+            overviewArea.setMaximumSize(new Dimension(200, 100));
+            overviewArea.setAlignmentX(Component.LEFT_ALIGNMENT);
+            overviewArea.setBorder(BorderFactory.createEmptyBorder(5, 0, 0, 0));
+            moviePanel.add(overviewArea);
 
             centerPanel.add(moviePanel);
+            if (i < maxMovies - 1) {
+                centerPanel.add(Box.createHorizontalStrut(80)); // adds space between movie panels
+            }
+
         }
 
-        whitePanel.add(centerPanel, BorderLayout.CENTER);
+        // Wrap centerPanel for vertical centering
+        JPanel centerWrapper = new JPanel(new GridBagLayout());
+        centerWrapper.setBackground(Color.LIGHT_GRAY);
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.gridx = 0;
+        gbc.gridy = 0;
+        gbc.anchor = GridBagConstraints.CENTER;
+        centerWrapper.add(centerPanel, gbc);
+
+        whitePanel.add(centerWrapper, BorderLayout.CENTER);
 
         // SOUTH: Replay button
         JPanel bottomPanel = new JPanel();
@@ -170,27 +205,6 @@ public class MovieView2 extends JFrame {
         revalidate();
         repaint();
     }
-
-
-    // Helper method to add a poster and label
-        private void addMoviePoster(JPanel panel, String imagePath, String title) {
-            JPanel moviePanel = new JPanel();
-            moviePanel.setLayout(new BorderLayout());
-            moviePanel.setBackground(Color.LIGHT_GRAY);
-
-            try {
-                ImageIcon icon = new ImageIcon(imagePath);
-                Image img = icon.getImage().getScaledInstance(200, 300, Image.SCALE_SMOOTH);
-                JLabel imageLabel = new JLabel(new ImageIcon(img));
-                JLabel titleLabel = new JLabel(title, SwingConstants.CENTER);
-                moviePanel.add(imageLabel, BorderLayout.CENTER);
-                moviePanel.add(titleLabel, BorderLayout.SOUTH);
-            } catch (Exception e) {
-                moviePanel.add(new JLabel("Image not found"), BorderLayout.CENTER);
-            }
-
-            panel.add(moviePanel);
-        }
 
     public static void main(String[] args) {
         MovieView2 current = new MovieView2();
